--- a/GOW/en.lproj/Localizable.strings
+++ b/GOW/en.lproj/Localizable.strings
@@ -42,3 +42,39 @@
 
 "weapon.name.mx8" = "MX8 Snub Pistol";
 "weapon.description.mx8" = "It was the standard sidearm for military personnel of the Coalition of Ordered Governments.";
+
+
+/* GAMES */
+"game.title.1" = "Gears of War";
+"game.year.1" = "2006";
+"game.description.1" = "The beginning of a legendary saga.";
+
+"game.title.2" = "Gears of War 2";
+"game.year.2" = "2008";
+"game.description.2" = "More action and a deeper story.";
+
+"game.title.3" = "Gears of War 3";
+"game.year.3" = "2011";
+"game.description.3" = "The conclusion of the original trilogy.";
+
+"game.title.4" = "Gears of War 4";
+"game.year.4" = "2016";
+"game.description.4" = "A new generation of heroes.";
+
+"game.title.5" = "Gears 5";
+"game.year.5" = "2019";
+"game.description.5" = "The biggest game in the franchise.";
+
+"game.title.6" = "Gears of War Judgment";
+"game.year.6" = "2013";
+"game.description.6" = "A prequel about Baird and Cole.";
+
+"game.title.7" = "Gears Tactics";
+"game.year.7" = "2020";
+"game.description.7" = "Real-time strategy action.";
+
+"game.title.8" = "Gears of War Ultimate Edition";
+"game.year.8" = "2015";
+"game.description.8" = "A remake of the classic.";
+
+"game.releaseYear" = "Release Year: %@";
