--- a/GOW/eo.lproj/Localizable.strings
+++ b/GOW/eo.lproj/Localizable.strings
@@ -31,3 +31,36 @@
 "weapon.description.hammer_of_dawn" = "La Martelo de la Mateniĝo estis satelit-bazita orbita lasero funkciigita per COG Imulsion. Ĝiaj kernaj komponantoj estis inventitaj de la sciencisto de la UIR Mauris Ivo kaj kompletigitaj de profesoro Adam Fenix post kiam ili estis ŝtelitaj dum la Operacio: Nivelo.";
 "weapon.name.mx8" = "MX8 Snub-Pistolo";
 "weapon.description.mx8" = "Ĝi estis la norma flanka armilo por la militistaro de la Koalicio de Ordigitaj Registaroj.";
+
+/* GAMES */
+"game.title.1" = "Gears of War";
+"game.year.1" = "2006";
+"game.description.1" = "La komenco de legenda sagao.";
+
+"game.title.2" = "Gears of War 2";
+"game.year.2" = "2008";
+"game.description.2" = "Pli da ago kaj pli profunda rakonto.";
+
+"game.title.3" = "Gears of War 3";
+"game.year.3" = "2011";
+"game.description.3" = "La konkludo de la originala trilogio.";
+
+"game.title.4" = "Gears of War 4";
+"game.year.4" = "2016";
+"game.description.4" = "Nova generacio da herooj.";
+
+"game.title.5" = "Gears 5";
+"game.year.5" = "2019";
+"game.description.5" = "La plej granda ludo de la franĉizo.";
+
+"game.title.6" = "Gears of War Judgment";
+"game.year.6" = "2013";
+"game.description.6" = "Antaŭrakonto pri Baird kaj Cole.";
+
+"game.title.7" = "Gears Tactics";
+"game.year.7" = "2020";
+"game.description.7" = "Reala-tempa strategia ago.";
+
+"game.title.8" = "Gears of War Ultimate Edition";
+"game.year.8" = "2015";
+"game.description.8" = "Reproduktado de la klasikaĵo.";
