--- a/GOW/fr.lproj/Localizable.strings
+++ b/GOW/fr.lproj/Localizable.strings
@@ -74,3 +74,35 @@
 "game.title.8" = "Gears of War Ultimate Edition";
 "game.year.8" = "2015";
 "game.description.8" = "Un remake du classique.";
+
+/* Personnages COG */
+"character.name.marcus" = "Marcus Fenix";
+"character.description.marcus" = "Chef des Gears, vétéran de guerre.";
+
+"character.name.dom" = "Dom Santiago";
+"character.description.dom" = "Meilleur ami de Marcus, avec une histoire tragique.";
+
+"character.name.baird" = "Damon Baird";
+"character.description.baird" = "Expert en technologie et en armement.";
+
+"character.name.cole" = "Augustus Cole";
+"character.description.cole" = "Ancien joueur de Thrashball, puissant au combat.";
+
+"character.name.anya" = "Anya Stroud";
+"character.description.anya" = "Stratège et leader de la résistance humaine.";
+
+/* Personnages Locust */
+"character.name.raam" = "Général RAAM";
+"character.description.raam" = "Chef impitoyable des Locust.";
+
+"character.name.skorge" = "Skorge";
+"character.description.skorge" = "Prêtre guerrier des Locust.";
+
+"character.name.karn" = "Karn";
+"character.description.karn" = "Commandant brutal des Locust.";
+
+"character.name.myrrah" = "Reine Myrrah";
+"character.description.myrrah" = "Reine de la Horde Locust.";
+
+"character.name.theron" = "Garde Theron";
+"character.description.theron" = "Soldats d'élite des Locust.";
